Working model with real inertia tensor
The realistic inertia tensor turned out more than 10 times less than the original one.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(subsimulation
 	main.cxx
 	simulation.cxx
 	ship.cxx
+	model.cxx
 )
 
 target_include_directories(subsimulation PUBLIC
